# deepfake-detector

./: .env.example  CONTRIBUTING.md  README.md  detector.py  gradio_app.py  pyproject.toml  requirements.txt  test_detector.py
.github/workflows/: test.yml
hf-space/: README.md
