[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepfake-detector"
version = "0.1.0"
description = "Detect AI-generated audio and video deepfakes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["deepfake", "ai-safety", "cybersecurity", "face-swap", "voice-spoofing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/my-ai-stack/deepfake-detector"
Repository = "https://github.com/my-ai-stack/deepfake-detector"
